--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,16 @@
     "name": "adswerve/google-analytics-and-adwords",
     "type": "typo3-cms-extension",
     "description": "This TYPO3 extension installs gtag so you can use google analytics and google ads",
+    "homepage": "https://github.com/adswerve/google_analytics_and_adwords",
+    "keywords": [
+        "TYPO3",
+        "GoogleAnalytics",
+        "GoogleAnalytics4",
+        "UniversalAnalytics,
+        "Gtag",
+        "GoogleAds",
+        "Adswerve"
+    ],
     "license": [
         "GPL-2.0+"
     ],
