--- a/composer.json
+++ b/composer.json
@@ -23,10 +23,18 @@
     ],
     "autoload": {
         "psr-4": {
-            "Adswerve\\GoogleAnalyticsAndAdwords\\": "Classes/"
+            "Adswerve\\GoogleAnalyticsAndAdwords\\": "Classes"
         }
     },
     "require": {
         "typo3/cms-core": "^10.4.0"
+    },
+    "extra": {
+        "typo3/cms": {
+            "extension-key": "google_analytics_and_adwords"
+        }
+    },
+    "support": {
+        "issues": "https://github.com/adswerve/google_analytics_and_adwords/issues"
     }
 }
