--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "TYPO3",
         "GoogleAnalytics",
         "GoogleAnalytics4",
-        "UniversalAnalytics,
+        "UniversalAnalytics",
         "Gtag",
         "GoogleAds",
         "Adswerve"
