--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
         "typo3-ter/google-analytics-and-adwords": "self.version"
     },
     "require": {
-        "typo3/cms-core": "^10.4.0"
+        "typo3/cms-core": "^10.4.0||^11.5.0"
     },
     "extra": {
         "typo3/cms": {
