--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -39,8 +39,8 @@ copyright   = by {extension.extensionKey}
 # ...  (recommended) to get the "Edit me on Github Button"
 # .................................................................................
 
-#github_branch        = main
-#github_repository    = adswerve/google_analytics_and_adwords
+github_branch        = main
+github_repository    = adswerve/google_analytics_and_adwords
 
 
 # .................................................................................
@@ -54,7 +54,7 @@ project_contact      = analytics-help@adswerve.com
 project_discussions  =
 
 # URL of webpage of your extension (if it has one)
-project_home         = https://github.com/adswerve/google_analytics_and_adwords/blob/main/README.md
+project_home         = https://github.com/adswerve/google_analytics_and_adwords
 
 # URL to Issues
 project_issues       = https://github.com/adswerve/google_analytics_and_adwords/issues
