updated project name in docs

--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -19,7 +19,7 @@
 # ...   (required) title (displayed in left sidebar (desktop) or top panel (mobile)
 # .................................................................................
 
-project     = Typo3 Extension Gtag (Google Analytics and Google Ads)
+project     = Global Site Tag (gtag.js) (Google Analytics, Google Ads, and Google Marketing Platform)
 
 # .................................................................................
 # ...   (recommended) version, displayed next to title (desktop) and in <meta name="book-version"
